--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ statistics = "^1.0.3"
 [tool.poetry.dev-dependencies]
 sphinx = "^2.4.3"
 sphinxcontrib-napoleon = "^0.7"
+pytest = "^5.3.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
